Fixed the collapse stuff, first item on what's happening opens automagically

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ a.expandToggle {
 	margin: 5px;
 	bottom: 0;
 	right: 0;
-	z-index:9999;
+	z-index:999;
 }
 
 .accordion-group {
